examples/Passing/Variables/lshift.c
int main() {
    int a = 5;
    a >>= 6;
    return a;
}
