examples/Failing/Variables/multi_declare.c
int main() {
    int a = 6;
    int a = 5;
    return a;
}
